--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,9 @@
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link href="https://api.mapbox.com/mapbox-gl-js/v3.15.0/mapbox-gl.css" rel="stylesheet" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="icon" href="./logo.png" />
 		<title>ELDA | Gestion des enneigeurs</title>
+		<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
